--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@
 # App Configuration
 # ===============================
 VITE_APP_NAME=Vamika
-VITE_BASE_URL=http://localhost:9090/
+VITE_BASE_URL=https://blog-backend-lake-eight.vercel.app/
